--- a/index.html
+++ b/index.html
@@ -203,12 +203,14 @@ h1{
 			var list = response.match(/\-\s+[^\n\r]+/ig);
 			var data = [];
 			list.forEach(function(l){
-				var matches = l.match(/\-\s+([\d\/\-\~]+)\s(.*)/i);
-				var time = matches[1];
-				var text = matches[2];
+				var matches = l.match(/\-\s+\[(\w*)\]\s([\d\/\-\~]+)\s(.*)/i);
+        var css_class = matches[1];
+				var time = matches[2];
+				var text = matches[3];
 				data.push({
 					time: life.parseTime(time),
-					text: text
+					text: text,
+          css: css_class
 				});
 			});
 			return data;
@@ -302,7 +304,7 @@ h1{
 				d.text = d.text.replace(link[0], "<a href='" + link[2] + "'" + link_attr + ">" + link[1] + "</a>");
 			}
 
-			return '<div class="event" style="margin-left: ' + offset.toFixed(2) + 'px">'
+			return '<div class="event ' + d.css + '" style="margin-left: ' + offset.toFixed(3) + 'px">'
 				+ '<div class="time" style="width: ' + width.toFixed(2) + 'px"></div>'
 				+ '<b>' + d.time.title + '</b> ' + d.text
 				+ '</div>';
